super commit v3.0 pronta e testata

--- a/contacts.html
+++ b/contacts.html
@@ -56,7 +56,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         We are always looking for new ways to improve our mission and would love to hear about your experience.
                         Continuing to evolve and improve our Gen-IA Operative Framework and knowledge is our primary goal.
                         <br><br>
-                        <a href="mailto:genialabile@gmail.com?subject=Beta%20Access&body=Hello!">Join</a>
+                        <a href="mailto:genialabile@gmail.com?subject=Beta%20Access&body=Hello!" aria-label="Join Genialabile Beta Access">Join</a>
                         our preview access for beta testers or early adopters to explore the efficiency of our Models.
                         The applications extend across various fields, from creative writing, art, and philosophy to complex business models and strategic marketing.
                         <br><br>
@@ -68,12 +68,14 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     </h3>
                     <hr class="thin-line">
                         Live: 
-                        <a href="https://genialabile.com/gpt">genialabile.com/gpt</a>
-                        <a href="https://genialabile.com/gpt" class="link-live" style="color: #00bbff;" ><b>·</b></a>
+                        <a href="https://genialabile.com/gpt" aria-label="Visit Genialabile Live Homepage">genialabile.com/gpt</a>
+                        <a href="https://genialabile.com/gpt" class="link-live" style="color: #00bbff;" aria-label="Visit Genialabile Live Homepage"><b>·</b></a>
                         <br><br>
                         Static: 
-                        <a href="https://genialabile.com/">genialabile.com</a>
-                        <div class="link-static"><a href="https://genialabile.com/" class="link-static" style="color: #ffbbff;"><b>·</b></a></div>
+                        <a href="https://genialabile.com/" aria-label="Visit Genialabile Static Homepage">genialabile.com</a>
+                        <div class="link-static">
+                            <a href="https://genialabile.com/" class="link-static" style="color: #ffbbff;" aria-label="Visit Genialabile Static Homepage"><b>·</b></a>
+                        </div>
                 </p>
                 <p>
                     <h3><br>
@@ -81,27 +83,27 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     </h3> 
                     <hr class="thin-line">
                         Gen:
-                        <a href="mailto:info@genialabile.com?subject=Contact%20Request">info@genialabile.com</a>
+                        <a href="mailto:info@genialabile.com?subject=Contact%20Request" aria-label="Email Genialabile at info@genialabile.com">info@genialabile.com</a>
                         <i>(limited uptime)</i>
                     <br><br>
                         Gmail:
-                        <a href="mailto:genialabile@gmail.com?subject=Contact%20Request">genialabile@gmail.com</a>
+                        <a href="mailto:genialabile@gmail.com?subject=Contact%20Request" aria-label="Email Genialabile at genialabile@gmail.com">genialabile@gmail.com</a>
                 </p>
                 <p>
                     <h3><br>
                         👻 Social
                     </h3>
                     <hr class="thin-line">
-                        Twitter—X.com/<a href="https://x.com/genialabile/">genialabile</a>
+                        Twitter—X.com/<a href="https://x.com/genialabile/" aria-label="Visit Genialabile on Twitter">genialabile</a>
                         <br><br>
-                        YouTube.com/<a href="https://youtube.com/@genialabile/">@genialabile</a>
+                        YouTube.com/<a href="https://youtube.com/@genialabile/" aria-label="Visit Genialabile on YouTube">@genialabile</a>
                         <br><br>
-                        Instagram.com/<a href="https://instagram.com/genialabile/">genialabile</a>
+                        Instagram.com/<a href="https://instagram.com/genialabile/" aria-label="Visit Genialabile on Instagram">genialabile</a>
                         <br><br>
-                        Threads.net/<a href="https://threads.net/@genialabile/">@genialabile</a>
+                        Threads.net/<a href="https://threads.net/@genialabile/" aria-label="Visit Genialabile on Threads">@genialabile</a>
                         <!--<br><br>
-                        LinkedIn.com/ 
-                        <a href="https://linkedin.com/company/genialabile">genialabile</a>-->
+                        LinkedIn.com/
+                        <a href="https://linkedin.com/company/genialabile" aria-label="Visit Genialabile on LinkedIn">genialabile</a>-->
                 </p>
                 <p>
                     <h3><br>
@@ -109,22 +111,21 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     </h3>
                     <hr class="thin-line">
                         Develop & Designed by
-                        <a href="https://x.com/seiseisette/">seiseisette</a>.
+                        <a href="https://x.com/seiseisette/" aria-label="Visit seiseisette on X (Twitter)">seiseisette</a>.
                         <br><br>
                         Website & Repository Hosted by GitHub:
-                        <a href="https://github.com/seiseisette/Gen-IA/">Gen-IA</a>.
+                        <a href="https://github.com/seiseisette/Gen-IA/" aria-label="Visit Gen-IA repository on GitHub">Gen-IA</a>.
                         <br><br>
-                        Genialabile is evolving and running  on ChatGPT.
+                        Genialabile is evolving and running on ChatGPT.
                         <br>
-                        Powered by <a href="https://openai.com/">OpenAI</a>.
+                        Powered by <a href="https://openai.com/" aria-label="Visit OpenAI website">OpenAI</a>.
                         <br><br>
                         Concept & Gen-IA OFM Designed by seiseisette.
                         <br>
                         © 2025 Genialabile. All Rights Reserved.
                         <br>
                         ORCID:
-                        <a href="https://orcid.org/0009-0002-6309-2937"
-                        target="_blank" rel="noopener noreferrer" style="width: normal; color: #f4f4f4;">0009-0002-6309-2937</a>
+                        <a href="https://orcid.org/0009-0002-6309-2937" target="_blank" rel="noopener noreferrer" style="width: normal; color: #f4f4f4;" aria-label="Visit seiseisette's ORCID profile 0009-0002-6309-2937">0009-0002-6309-2937</a>
                 </p>
                 <p>
                     <h3><br>
@@ -133,7 +134,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     <hr class="thin-line">
                         <div class="card">
                             <div class="card-image-container">
-                                <img src="https://genialabile.com/gen-fav-rd.png?v=2" alt="GENiALABILE Logo" class="card-image" loading="lazy">
+                                <img src="https://genialabile.com/gen-fav-rd.png?v=2" alt="Genialabile Logo" class="card-image" loading="lazy">
                             </div>
                             <div class="card-text">
                                 <p class="imp-p">
