--- a/footer.html
+++ b/footer.html
@@ -20,7 +20,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 # URL: https://genialabile.com/footer.html
 ===============================================================================
 -->
-
+<!-- START -->
 <!--// STARTLINE & SAY HI //--->
 
     <!-- MUST -->
