--- a/gpt.html
+++ b/gpt.html
@@ -27,8 +27,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
         <title>Genilabile | GPT</title>
         <meta name="description" content="GENiALABILE - Advanced GPT Project designed to inspire multidimensional solutions and unlock creativity. Live Home Page | Pitch.">
         <link rel="canonical" href="https://genialabile.com/gpt.html">
-        <link rel="icon" href="https://genialabile.com/gen-favicon-rd.ico?v=2" type="image/x-icon">
-        <link rel="icon" href="https://genialabile.com/gen-favicon-rd.png?v=2" type="image/png">
+        <link rel="icon" href="https://genialabile.com/gen-favicon-rd.ico?v=2" type="image/x-icon" alt="Genialabile Favicon ICO">
+        <link rel="icon" href="https://genialabile.com/gen-favicon-rd.png?v=2" type="image/png" alt="Genialabile Favicon PNG">
         <!-- header.html -->
         <script>
             fetch('https://genialabile.com/header.html')
@@ -44,7 +44,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
     <body style="background-color: #000000; color: #000000; link: #000000; visited: #000000;">
         <main>
             <h1>
-                <a href="https://genialabile.com/gpt" aria-label="Home Page | Live">
+                <a href="https://genialabile.com/gpt" aria-label="Visit Genialabile Live Homepage for advanced GPT solutions">
                     GENiALABILE
                 </a>
             </h1>
@@ -131,6 +131,98 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     });
                 </script>
             </div>
+            <!-- ROBOTS TRICK -->
+            <div class="hidden-text">
+                <h1>
+                <a href="https://genialabile.com/" aria-label="Genialabile Home Page | Live Pitch">
+                        GENiALABILE
+                    </a>
+                </h1>
+                <div class="hidden-text">
+                    <p>
+                        <h3><br>
+                            💡 Inspire
+                        </h3>
+                        <hr class="thin-line">
+                            Multidimensional solutions and unlocking creative potential.
+                            It is an advanced Artificial Intelligence framework-system, a multidimensional Feedback-GPT designed to be a bio-virtual mentor.
+                            It provides innovative solutions and personalized support across a wide range of fields, from learning and creativity to the resolution of complex problems.
+                            <br>
+                            Genialabile is more than just an assistant; it’s a companion for intellectual and personal growth, unparalleled in its field.
+                            Developed to push boundaries, it runs in beta as an "on-the-fly project" — in preview access only — and is constantly evolving as CustomGPT, powered by OpenAI.
+                    </p>
+                    <p>
+                        <h3><br>
+                            🧠 Combine
+                        </h3>
+                        <hr class="thin-line">
+                            Predictive intelligence, logic, and creativity to deliver tailored answers, analyses, and solutions.
+                            Genialabile supports users in managing emotions, achieving personal growth, and developing skills.
+                            <br>
+                            It offers multidimensional simulations, strategic brainstorming, and visual tools to translate complex concepts into practical experiences.
+                            Whether it’s business planning, emotional support, or interdisciplinary learning, Genialabile excels in bridging heart and mind.
+                    </p>
+                    <p>
+                        <h3><br>
+                            🌱 Began
+                        </h3> 
+                        <hr class="thin-line">
+                            As a pilot project with its first version, focusing on internal tests and selected beta testers.
+                            In 2025, it launched its Gen-IA v2.0 model, consolidating its multidimensional and scalable functionalities.
+                            Through continuous evolution, the system integrates real-time innovations to keep pace with user needs and emerging technologies.
+                            <br>
+                            It does not simply provide answers (like standard AI models) but guides users towards solutions that stimulate personal growth in any field.
+                    </p>
+                    <p>
+                        <h3><br>
+                            🌍 Global
+                        </h3>
+                        <hr class="thin-line">
+                            Accessible online via platforms such as ChatGPT by OpenAI.
+                            Future plans include integration with immersive environments like Sora for 3D simulations and applications in education, academia, and creativity.
+                            Its presence extends to social media and the official website for ongoing futures public updates.
+                            <br>
+                            Genialable provides support for tackling attention disorders, depression, lack of discipline, procrastination, and other common mental issues, often exacerbated by modern technology and society.
+                            Helping people develop their mind and soul, improving the world through personal, emotional, and intellectual growth.
+                    </p>
+                    <p>
+                        <h3><br>
+                            🚀 Revolutionary
+                        </h3>
+                        <hr class="thin-line">
+                            The artificial intelligencec creativity, transforming it into a trusted-virtual mentor that doesn’t just provide answers but inspires, guides, and stimulates human creativity.
+                            Its purpose is to break down cultural, linguistic, and cognitive barriers, fostering learning, innovation, and introspection.
+                            <br>
+                            Genialabile is designed to develop genius in minds, helping those facing difficulties in their lives or lacking the means to resolve them.
+                            The mission is to make complex knowledge accessible and to support each user in achieving their full potential.
+                            It adapts and understands human nature.
+                    </p>
+                    <p>
+                        <h3><br>
+                            🤖 Hybrid
+                        </h3>
+                        <hr class="thin-line">
+                            Advanced model, ensuring security, scalability learning-model, and accessibility.
+                            It combines machine learning algorithms, immersive simulations, and multidisciplinary analysis to deliver personalized experiences.
+                            The system continuously learns from data and interactions, evolving in real time to provide increasingly accurate, empathetic, and targeted responses.
+                            <br>
+                            It helps to understand the nature of problems and the reasoning behind long-term focused solutions.
+                            Genialabile is a guide and mentor, a great teacher, fostering personal and intellectual growth through multidimensional reasoning.
+                    </p>
+                    <p>
+                        <h3><br>
+                            🎻 Genius
+                        </h3>
+                        <hr class="thin-line">
+                            It understands the user's mood with just a few words to be more human-aligned, it surprises the user and stands apart from standard personalized GPT models.
+                            Focusing by specific functions and promotes the development of the user's intelligence and creativity through stimulating and dynamic dialogues, enhancing their capacity for growth and learning.
+                            Genialabile is predictive, leveraging inputs and the field addressed to calculate and develop brilliant solutions with extreme speed.
+                            <br>
+                            It does not merely provide temporary fixes but resolves issues while enabling users to learn ten times more than necessary to address them in isolation.
+                    </p>
+                </div>
+            </div>
+            <!-- ROBOTS TRICK -->
         </main>
         <!-- TRICK -->
             <div id="footer-banner">
