--- a/accessibility.html
+++ b/accessibility.html
@@ -103,11 +103,11 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     </h3> 
                     <hr class="thin-line">
                         Gen:
-                        <a href="mailto:info@genialabile.com?subject=Contact%20Request">info@genialabile.com</a>
+                        <a href="mailto:info@genialabile.com?subject=Contact%20Request" aria-label="Email Genialabile at info@genialabile.com">info@genialabile.com</a>
                         <i>(limited uptime)</i>
                         <br><br>
                         Gmail:
-                        <a href="mailto:genialabile@gmail.com?subject=Contact%20Request">
+                        <a href="mailto:genialabile@gmail.com?subject=Contact%20Request" aria-label="Email Genialabile at genialabile@gmail.com">
                             genialabile@gmail.com
                         </a>
                 </p>
