--- a/genialabile-gpt-access.html
+++ b/genialabile-gpt-access.html
@@ -27,8 +27,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
         <title>Genialabile | GPT-Access</title>
         <meta name="description" content="Genialabile - GPT-Access designed for Genialabile & Co.">
         <link rel="canonical" href="https://genialabile.com/genialabile-gpt-access.html">
-        <link rel="icon" href="https://genialabile.com/gen-favicon-rd.ico?v=2" type="image/x-icon">
-        <link rel="icon" href="https://genialabile.com/gen-favicon-rd.png?v=2" type="image/png">
+        <link rel="icon" href="https://genialabile.com/gen-favicon-rd.ico?v=2" type="image/x-icon" alt="Genialabile Favicon ICO">
+        <link rel="icon" href="https://genialabile.com/gen-favicon-rd.png?v=2" type="image/png" alt="Genialabile Favicon PNG">
         <!-- header.html -->
         <script>
             fetch('https://genialabile.com/header.html')
@@ -62,11 +62,11 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         If you have any questions, please contact us at:
                         <br><br>
                         Gen:
-                        <a href="mailto:info@genialabile.com?subject=Contact%20Request">info@genialabile.com</a>
+                        <a href="mailto:info@genialabile.com?subject=Contact%20Request" aria-label="Email Genialabile at info@genialabile.com">info@genialabile.com</a>
                         <i>(limited uptime)</i>
                         <br><br>
                         Gmail:
-                        <a href="mailto:genialabile@gmail.com?subject=Contact%20Request">
+                        <a href="mailto:genialabile@gmail.com?subject=Contact%20Request" aria-label="Email Genialabile at genialabile@gmail.com">
                             genialabile@gmail.com
                         </a>
                 </p>
