--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -27,8 +27,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
         <title>Genialabile | Privacy Policy</title>
         <meta name="description" content="Genialabile - Privacy Policy Content.">
         <link rel="canonical" href="https://genialabile.com/privacy-policy.html">
-        <link rel="icon" href="https://genialabile.com/gen-favicon-rd.ico?v=2" type="image/x-icon">
-        <link rel="icon" href="https://genialabile.com/gen-favicon-rd.png?v=2" type="image/png">
+        <link rel="icon" href="https://genialabile.com/gen-favicon-rd.ico?v=2" type="image/x-icon" alt="Genialabile Favicon ICO">
+        <link rel="icon" href="https://genialabile.com/gen-favicon-rd.png?v=2" type="image/png" alt="Genialabile Favicon PNG">
         <!-- header.html -->
         <script>
             fetch('https://genialabile.com/header.html')
@@ -88,12 +88,11 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     </h3>
                     <hr class="thin-line">
                         We do not use Google Analytics to understand user interactions.
-                        <br><br><!---It collects anonymized data such as IP addresses, geographic location, and browsing activity.-->
+                        <br><br>
                         # Opt-Out:
                         <br>
                         Users can manage the tracking through the
-                        <a href="https://tools.google.com/dlpage/gaoptout" target="_blank" style="font-weight: normal;">Google Analytics Opt-Out Browser Add-on</a>.
-                        <!-- Users can disable Google Analytics tracking through the -->
+                        <a href="https://tools.google.com/dlpage/gaoptout" target="_blank" style="font-weight: normal;" aria-label="Install Google Analytics Opt-Out Browser Add-on to disable tracking">Google Analytics Opt-Out Browser Add-on</a>.
                 </p>
                 <p>
                     <h3><br>
@@ -130,11 +129,11 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         🍪 Cookies
                     </h3>
                     <hr class="thin-line">
-                        Please visit our <a href="https://genialabile.com/cookie-policy.html" style="font-weight: normal;">Cookie Policy</a>
+                        Please visit our <a href="https://genialabile.com/cookie-policy.html" style="font-weight: normal;" aria-label="Visit Cookie Policy page">Cookie Policy</a>
                         for more information about how we use cookies on this website.
                         Cookies are used to improve user experience.
                         Manage your preferences through browser settings or via the 
-                        <a href="https://www.youronlinechoices.com/" target="_blank" style="font-weight: normal;">Your Online Choices</a> platform.
+                        <a href="https://www.youronlinechoices.com/" target="_blank" style="font-weight: normal;" aria-label="Visit Your Online Choices platform (opens in new tab)">Your Online Choices</a> platform.
                </p>
                 <p>
                     <h3><br>
@@ -179,11 +178,11 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         If you have any questions or concerns, please contact us at:
                         <br><br>
                         Gen:
-                        <a href="mailto:info@genialabile.com?subject=Cookie%20Policy">info@genialabile.com</a>
+                        <a href="mailto:info@genialabile.com?subject=Cookie%20Policy" aria-label="Email Genialabile at info@genialabile.com regarding Privacy Policy">info@genialabile.com</a>
                         <i>(limited uptime)</i>
                         <br><br>
                         Gmail:
-                        <a href="mailto:genialabile@gmail.com?subject=Cookie%20Policy"">
+                        <a href="mailto:genialabile@gmail.com?subject=Cookie%20Policy" aria-label="Email Genialabile at genialabile@gmail.com regarding Privacy Policy">
                             genialabile@gmail.com
                         </a>
                 </p>
