--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>GENiALABILE | Home</title>
+        <title>Genialabile | Home</title>
         <meta name="description" content="GENiALABILE - Advanced GPT Project designed to inspire multidimensional solutions and unlock creativity. Static Home Page | Pitch.">
         <link rel="canonical" href="https://genialabile.com/index.html">
         <link rel="icon" href="https://genialabile.com/gen-favicon-rd.ico?v=2" type="image/x-icon">
