Aggiorna i link delle icone e migliora l'accessibilità nei file HTML

--- a/contacts.html
+++ b/contacts.html
@@ -27,7 +27,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
         <title>Genialabile | Contacts</title>
         <meta name="description" content="Genialabile - Contacts & Social Media and Credits">
         <link rel="canonical" href="https://genialabile.com/contacts.html">
-        <link rel="icon" href="https://genialabile.com/gen-favicon-rd.ico?v=2" type="image/x-icon">
+
         <link rel="icon" href="https://genialabile.com/gen-favicon-rd.png?v=2" type="image/png">
         <!-- header.html -->
         <script>
@@ -44,7 +44,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
     <body style="background-color: #000000; color: #000000; link: #000000; visited: #000000;">
         <main>
             <h1>
-                CONTACTS & CREDITS
+               <a href="https://genialabile.com/contacts" aria-label="Visit Genialabile Contacts Page">
+                CONTACTS
+            </a>
             </h1>
             <div class="imp-l">
                 <p>
@@ -69,13 +71,11 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     <hr class="thin-line">
                         Live: 
                         <a href="https://genialabile.com/gpt" aria-label="Visit Genialabile Live Homepage">genialabile.com/gpt</a>
-                        <a href="https://genialabile.com/gpt" class="link-live" style="color: #00bbff;" aria-label="Visit Genialabile Live Homepage"><b>·</b></a>
+                        <a href="https://genialabile.com/gpt" class="link-live" style="color: #00bbff; font-size: 0.6rem" aria-label="Visit Genialabile Live Homepage">◉</a>
                         <br><br>
                         Static: 
                         <a href="https://genialabile.com/" aria-label="Visit Genialabile Static Homepage">genialabile.com</a>
-                        <div class="link-static">
-                            <a href="https://genialabile.com/" class="link-static" style="color: #ffbbff;" aria-label="Visit Genialabile Static Homepage"><b>·</b></a>
-                        </div>
+                        <a href="https://genialabile.com/" class="link-static" style="color: #ffbbff; font-size: 0.6rem;" aria-label="Visit Genialabile Static Homepage">◎</a>
                 </p>
                 <p>
                     <h3><br>
@@ -127,6 +127,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         ORCID:
                         <a href="https://orcid.org/0009-0002-6309-2937" target="_blank" rel="noopener noreferrer" style="width: normal; color: #f4f4f4;" aria-label="Visit seiseisette's ORCID profile 0009-0002-6309-2937">0009-0002-6309-2937</a>
                 </p>
+                <!--
                 <p>
                     <h3><br>
                         ❤️ Thanks
@@ -147,6 +148,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                             </div>
                         </div>
                 </p>
+                -->
             </div>
         </main>
         <!-- TRICK -->
