--- a/genialabile-gpt-access.html
+++ b/genialabile-gpt-access.html
@@ -27,7 +27,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
         <title>Genialabile | GPT-Access</title>
         <meta name="description" content="Genialabile - GPT-Access designed for Genialabile & Co.">
         <link rel="canonical" href="https://genialabile.com/genialabile-gpt-access.html">
-        <link rel="icon" href="https://genialabile.com/gen-favicon-rd.ico?v=2" type="image/x-icon" alt="Genialabile Favicon ICO">
+      
         <link rel="icon" href="https://genialabile.com/gen-favicon-rd.png?v=2" type="image/png" alt="Genialabile Favicon PNG">
         <!-- header.html -->
         <script>
@@ -44,7 +44,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
     <body style="background-color: #000000; color: #000000; link: #000000; visited: #000000;">
         <main>
             <h1>
-                GPT ACCESS
+                <a href="https://genialabile.com/genialabile-gpt-access.html" aria-label="Accesso GPT Genialabile" title="GPT Access Genialabile">
+                    GPT ACCESS
+                </a>
             </h1>
             <div class="imp-l">
                 <p>
