--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
 <html lang="en">
     <head>
         <title>Genialabile | Home</title>
-        <meta name="description" content="GENiALABILE - Advanced GPT Project designed to inspire multidimensional solutions and unlock creativity. Static Home Page | Pitch.">
+        <meta name="description" content="Genialabile - Advanced GPT Project designed to inspire multidimensional solutions and unlock creativity. Static Home Page | Pitch.">
         <link rel="canonical" href="https://genialabile.com/index.html">
-        <link rel="icon" href="https://genialabile.com/gen-favicon-rd.ico?v=2" type="image/x-icon">
+      
         <link rel="icon" href="https://genialabile.com/gen-favicon-rd.png?v=2" type="image/png">
         <!-- header.html -->
           <script>
@@ -44,8 +44,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
     <body style="background-color: #000000; color: #000000; link: #000000; visited: #000000;">
         <main>
             <h1>
-                <a href="https://genialabile.com/" aria-label="Genialabile Home Page | Static Pitch">
-                    GENiALABILE
+                <a href="https://genialabile.com/" aria-label="Visit Genialabile Home" title="Visit Genialabile Home">
+                    Genialabile
                 </a>
             </h1>
             <div>
