--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -27,7 +27,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
         <title>Genialabile | Privacy Policy</title>
         <meta name="description" content="Genialabile - Privacy Policy Content.">
         <link rel="canonical" href="https://genialabile.com/privacy-policy.html">
-        <link rel="icon" href="https://genialabile.com/gen-favicon-rd.ico?v=2" type="image/x-icon" alt="Genialabile Favicon ICO">
+   
         <link rel="icon" href="https://genialabile.com/gen-favicon-rd.png?v=2" type="image/png" alt="Genialabile Favicon PNG">
         <!-- header.html -->
         <script>
@@ -44,7 +44,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
     <body style="background-color: #000000; color: #000000; link: #000000; visited: #000000;">
         <main>
             <h1>
-                PRIVACY POLICY
+                <a href="https://genialabile.com/privacy-policy.html" aria-label="Read our full Privacy Policy" title="Read our full Privacy Policy">
+                    PRIVACY POLICY
+                </a>
             </h1>
             <div class="imp-l">
                 <p>
@@ -178,7 +180,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         If you have any questions or concerns, please contact us at:
                         <br><br>
                         Gen:
-                        <a href="mailto:info@genialabile.com?subject=Cookie%20Policy" aria-label="Email Genialabile at info@genialabile.com regarding Privacy Policy">info@genialabile.com</a>
+                        <a href="mailto:info@genialabile.com?subject=Cookie%20Policy" aria-label="Email Genialabile at info@genialabile.com regarding Privacy Policy">
+                            info@genialabile.com
+                        </a>
                         <i>(limited uptime)</i>
                         <br><br>
                         Gmail:
