--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -27,7 +27,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
         <title>Genialabile | Terms & Conditions</title>
         <meta name="description" content="Genialabile - Terms & Conditions Disclosure.">
         <link rel="canonical" href="https://genialabile.com/terms-and-conditions.html">
-        <link rel="icon" href="https://genialabile.com/gen-favicon-rd.ico?v=2" type="image/x-icon" alt="Genialabile Favicon ICO">
+    
         <link rel="icon" href="https://genialabile.com/gen-favicon-rd.png?v=2" type="image/png" alt="Genialabile Favicon PNG">
         <!-- header.html -->
         <script>
@@ -44,7 +44,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
     <body style="background-color: #000000; color: #000000; link: #000000; visited: #000000;">
         <main>
             <h1>
-                TERMS & CONDITIONS
+                <a href="https://genialabile.com/terms-and-conditions.html" aria-label="Read our Terms and Conditions" title="Read our Terms and Conditions">
+                    TERMS & CONDITIONS
+                </a>
             </h1>
             <div class="imp-l">
                 <p>
@@ -52,7 +54,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         🎗️ Welcome
                     </h3>
                     <hr class="thin-line">
-                        Please read these Terms & Conditions [<a href="https://genialabile.com/terms-and-conditions" aria-label="Current Terms and Conditions page">The Current Page</a>] carefully before using our website and services.
+                        Please read these Terms & Conditions [<a href="https://genialabile.com/terms-and-conditions" aria-label="Current Terms and Conditions page">Current Page</a>] carefully before using our website and services.
                         By accessing or using our platform, you agree to comply with these Terms. If you do not agree, you must not use our services.
                 </p>
                 <p>
