--- a/accessibility.html
+++ b/accessibility.html
@@ -27,7 +27,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
         <title>Genialabile | Accessibility</title>
         <meta name="description" content="Genialabile - Accessibility Front Statement.">
         <link rel="canonical" href="https://genialabile.com/accessibility.html">
-        <link rel="icon" href="https://genialabile.com/gen-favicon-rd.ico?v=2" type="image/x-icon">
+       
         <link rel="icon" href="https://genialabile.com/gen-favicon-rd.png?v=2" type="image/png">
         <!-- header.html -->
         <script>
@@ -44,7 +44,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
     <body style="background-color: #000000; color: #000000; link: #000000; visited: #000000;">
         <main>
             <h1>
-                ACCESSIBILITY STATEMENT
+                <a href="https://genialabile.com/accessibility" aria-label="Visit Genialabile Accessibility Statement Page">
+                    ACCESSIBILITY STATEMENT
+                </a>
             </h1>
             <div class="imp-l">
                 <p>
