--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -27,7 +27,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
         <title>Genialabile | Cookie Policy</title>
         <meta name="description" content="Genialabile - Cookie Policy Content.">
         <link rel="canonical" href="https://genialabile.com/cookie-policy.html">
-        <link rel="icon" href="https://genialabile.com/gen-favicon-rd.ico?v=2" type="image/x-icon" alt="Genialabile Favicon ICO">
+       
         <link rel="icon" href="https://genialabile.com/gen-favicon-rd.png?v=2" type="image/png" alt="Genialabile Favicon PNG">
         <!-- header.html -->
         <script>
@@ -44,7 +44,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
     <body style="background-color: #000000; color: #000000; link: #000000; visited: #000000;">
         <main>
             <h1>
-                COOKIE POLICY
+                <a href="https://genialabile.com/cookie-policy" aria-label="Visit Genialabile Cookie Policy Page">
+                    COOKIE POLICY
+                </a>
             </h1>
             <div class="imp-l">
                 <p>
