--- a/gpt.html
+++ b/gpt.html
@@ -25,9 +25,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
 <html lang="en">
     <head>
         <title>Genilabile | GPT</title>
-        <meta name="description" content="GENiALABILE - Advanced GPT Project designed to inspire multidimensional solutions and unlock creativity. Live Home Page | Pitch.">
+        <meta name="description" content="Genialabile - Advanced GPT Project designed to inspire multidimensional solutions and unlock creativity. Live Home Page | Pitch.">
         <link rel="canonical" href="https://genialabile.com/gpt.html">
-        <link rel="icon" href="https://genialabile.com/gen-favicon-rd.ico?v=2" type="image/x-icon" alt="Genialabile Favicon ICO">
+      
         <link rel="icon" href="https://genialabile.com/gen-favicon-rd.png?v=2" type="image/png" alt="Genialabile Favicon PNG">
         <!-- header.html -->
         <script>
@@ -44,7 +44,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
     <body style="background-color: #000000; color: #000000; link: #000000; visited: #000000;">
         <main>
             <h1>
-                <a href="https://genialabile.com/gpt" aria-label="Visit Genialabile Live Homepage for advanced GPT solutions">
+                <a href="https://genialabile.com/gpt" aria-label="Visit Genialabile Live Homepage for advanced GPT solutions" title="Visit Genialabile Live Homepage for advanced GPT solutions">
                     GENiALABILE
                 </a>
             </h1>
@@ -134,9 +134,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
             <!-- ROBOTS TRICK -->
             <div class="hidden-text">
                 <h1>
-                <a href="https://genialabile.com/" aria-label="Genialabile Home Page | Live Pitch">
-                        GENiALABILE
-                    </a>
+                    GENiALABILE
                 </h1>
                 <div class="hidden-text">
                     <p>
