Aggiorna i link e migliora la formattazione nei file contacts.html e gpt.html

--- a/contacts.html
+++ b/contacts.html
@@ -122,7 +122,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         <br><br>
                         Concept & Gen-IA OFM Designed by seiseisette.
                         <br>
-                        © 2025 Genialabile. All Rights Reserved.
+                        <b>©</b> 2025 Genialabile. All Rights Reserved.
                         <br>
                         ORCID:
                         <a href="https://orcid.org/0009-0002-6309-2937" target="_blank" rel="noopener noreferrer" style="width: normal; color: #f4f4f4;" aria-label="Visit seiseisette's ORCID profile 0009-0002-6309-2937">0009-0002-6309-2937</a>
