Rinomina il titolo nel file index.html per migliorare la visibilità del marchio

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
         <main>
             <h1>
                 <a href="https://genialabile.com/" aria-label="Visit Genialabile Home" title="Visit Genialabile Home">
-                    Genialabile
+                    GENiALABILE
                 </a>
             </h1>
             <div>
