Correggi l'allineamento e la formattazione del testo in privacy-policy.html e terms-and-conditions.html per migliorare la leggibilità

--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -54,8 +54,10 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         🎗️ Welcome
                     </h3>
                     <hr class="thin-line">
-                        Please read these Terms & Conditions [<a href="https://genialabile.com/terms-and-conditions" aria-label="Current Terms and Conditions page">Current Page</a>] carefully before using our website and services.
-                        By accessing or using our platform, you agree to comply with these Terms. If you do not agree, you must not use our services.
+                        Please read these Terms & Conditions [<a href="https://genialabile.com/terms-and-conditions" aria-label="Current Terms and Conditions page">Current Page</a>]
+                        carefully before using our website and services.
+                        By accessing or using our platform, you agree to comply with these Terms.
+                        If you do not agree, you must not use our services.
                 </p>
                 <p>
                     <h3><br>
@@ -101,7 +103,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     </h3>
                     <hr class="thin-line">
                         All intellectual property rights, including but not limited to content, designs, trademarks, logos, and proprietary materials,
-                        are the exclusive property of Genialabile and its Creator, or are used under valid licenses from our licensors.
+                        are the exclusive property of Genialabile and its Author, or are used under valid licenses from our licensors.
                         Any unauthorized use, copying, distribution, modification, reproduction, or display of these materials, in whole or in part,
                         is strictly prohibited and constitutes a violation of applicable intellectual property laws.
                         <br>
@@ -114,7 +116,8 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     <hr class="thin-line">
                     By using our services, you agree to provide accurate, complete, and up-to-date information at all times.
                     You are solely responsible for maintaining the confidentiality and security of your account credentials,
-                    including any usernames, passwords, or other access information. Any activity conducted under your account will be considered your responsibility.
+                    including any usernames, passwords, or other access information.
+                    Any activity conducted under your account will be considered your responsibility.
                     Your continued use of our services constitutes your acknowledgment and acceptance of these Terms, as well as any updates or amendments that may be made from time to time.
                     <br>
                     It is your responsibility to review these Terms periodically to ensure compliance.
@@ -129,7 +132,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         We reserve the right to modify or discontinue our services at any time.
                         <br>
                         User is directly responsible for any data loss or damage using our platform and services.
-                        we are not responsible for any third-party services or content linked to our website.
+                        We are not responsible for any third-party services or content linked to our website.
                         <br>
                         Before using our services, you must ensure that they meet your requirements.
                 </p>
