--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -94,12 +94,18 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         Adjust your browser settings to block or delete cookies.
                         Use platforms like:
                         <br><br>
-                        <a href="https://www.youronlinechoices.com/" target="_blank" aria-label="Visit Your Online Choices (EU)">Your Online Choices</a> (EU).
+                        <a href="https://www.youronlinechoices.com/" target="_blank"
+                        aria-label="Visit Your Online Choices (EU)">
+                        Your Online Choices</a> (EU).
                         <br><br>
-                        <a href="https://optout.aboutads.info/" target="_blank" aria-label="Visit YourAdChoices (US)">YourAdChoices</a> (US).
+                        <a href="https://optout.aboutads.info/" target="_blank"
+                        aria-label="Visit YourAdChoices (US)">
+                        YourAdChoices</a> (US).
                         <br><br>
                         Disable Google Analytics tracking via 
-                        <a href="https://tools.google.com/dlpage/gaoptout" target="_blank" aria-label="Visit Google Analytics Opt-Out Add-on">Google Analytics Opt-Out Add-on</a>.
+                        <a href="https://tools.google.com/dlpage/gaoptout" target="_blank"
+                        aria-label="Visit Google Analytics Opt-Out Add-on">
+                        Google Analytics Opt-Out Add-on</a>.
                 </p>
                 <p>
                     <h3><br>
@@ -139,7 +145,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         We reserve the right to update this Cookie Policy.
                         <br>
                         Changes will be effective upon posting, and the "Last Updated" date will be revised accordingly.
-                        Please take a moment to review this policy periodically, same for our <a href="https://genialabile.com/privacy-policy.html" aria-label="Visit Privacy Policy">Privacy Policy</a>.
+                        Please take a moment to review this policy periodically, same for our
+                        <a href="https://genialabile.com/privacy-policy.html" aria-label="Visit Privacy Policy">
+                            Privacy Policy</a>.
                 </p>
                 <p>
                     <h3><br>
@@ -158,11 +166,14 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         If you have any questions or concerns, please contact us at:
                         <br><br>
                         Gen:
-                        <a href="mailto:info@genialabile.com?subject=Cookie%20Policy" aria-label="Email Genialabile at info@genialabile.com regarding Cookie Policy">info@genialabile.com</a>
+                        <a href="mailto:info@genialabile.com?subject=Cookie%20Policy"
+                        aria-label="Email Genialabile at info@genialabile.com regarding Cookie Policy">
+                        info@genialabile.com</a>
                         <i>(limited uptime)</i>
                         <br><br>
                         Gmail:
-                        <a href="mailto:genialabile@gmail.com?subject=Cookie%20Policy" aria-label="Email Genialabile at genialabile@gmail.com regarding Cookie Policy">
+                        <a href="mailto:genialabile@gmail.com?subject=Cookie%20Policy"
+                        aria-label="Email Genialabile at genialabile@gmail.com regarding Cookie Policy">
                             genialabile@gmail.com
                         </a>
                 </p>
