--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -94,7 +94,10 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         # Opt-Out:
                         <br>
                         Users can manage the tracking through the
-                        <a href="https://tools.google.com/dlpage/gaoptout" target="_blank" style="font-weight: normal;" aria-label="Install Google Analytics Opt-Out Browser Add-on to disable tracking">Google Analytics Opt-Out Browser Add-on</a>.
+                        <a href="https://tools.google.com/dlpage/gaoptout"
+                        target="_blank" style="font-weight: normal;"
+                        aria-label="Install Google Analytics Opt-Out Browser Add-on to disable tracking">
+                        Google Analytics Opt-Out Browser Add-on</a>.
                 </p>
                 <p>
                     <h3><br>
@@ -131,11 +134,14 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         🍪 Cookies
                     </h3>
                     <hr class="thin-line">
-                        Please visit our <a href="https://genialabile.com/cookie-policy.html" style="font-weight: normal;" aria-label="Visit Cookie Policy page">Cookie Policy</a>
+                        Please visit our <a href="https://genialabile.com/cookie-policy.html"
+                        style="font-weight: normal;" aria-label="Visit Cookie Policy page">Cookie Policy</a>
                         for more information about how we use cookies on this website.
                         Cookies are used to improve user experience.
                         Manage your preferences through browser settings or via the 
-                        <a href="https://www.youronlinechoices.com/" target="_blank" style="font-weight: normal;" aria-label="Visit Your Online Choices platform (opens in new tab)">Your Online Choices</a> platform.
+                        <a href="https://www.youronlinechoices.com/" target="_blank"
+                        style="font-weight: normal;" aria-label="Visit Your Online Choices platform (opens in new tab)">
+                        Your Online Choices</a> platform.
                </p>
                 <p>
                     <h3><br>
@@ -180,13 +186,15 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         If you have any questions or concerns, please contact us at:
                         <br><br>
                         Gen:
-                        <a href="mailto:info@genialabile.com?subject=Cookie%20Policy" aria-label="Email Genialabile at info@genialabile.com regarding Privacy Policy">
+                        <a href="mailto:info@genialabile.com?subject=Cookie%20Policy"
+                        aria-label="Email Genialabile at info@genialabile.com regarding Privacy Policy">
                             info@genialabile.com
                         </a>
                         <i>(limited uptime)</i>
                         <br><br>
                         Gmail:
-                        <a href="mailto:genialabile@gmail.com?subject=Cookie%20Policy" aria-label="Email Genialabile at genialabile@gmail.com regarding Privacy Policy">
+                        <a href="mailto:genialabile@gmail.com?subject=Cookie%20Policy"
+                        aria-label="Email Genialabile at genialabile@gmail.com regarding Privacy Policy">
                             genialabile@gmail.com
                         </a>
                 </p>
