Correggi il titolo della pagina in gpt.html per riflettere il nome corretto del progetto

--- a/gpt.html
+++ b/gpt.html
@@ -24,7 +24,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Genilabile | GPT</title>
+        <title>Genialabile | GPT</title>
         <meta name="description" content="Genialabile - Advanced GPT Project designed to inspire multidimensional solutions and unlock creativity. Live Home Page | Pitch.">
         <link rel="canonical" href="https://genialabile.com/gpt.html">
       
