Rimuovi il file site.webmanifest e aggiorna il link nel header.html per migliorare la gestione del manifesto dell'app

--- a/header.html
+++ b/header.html
@@ -38,7 +38,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 <link rel="apple-touch-icon" sizes="180x180" href="https://genialabile.com/assets/icons/apple-touch-icon.png">
 
 <!-- Manifest -->
-<link rel="manifest" href="https://genialabile.com/assets/icons/site.webmanifest" crossorigin="use-credentials">
+<link rel="manifest" href="https://genialabile.com/site.webmanifest" crossorigin="use-credentials">
 
 <!-- Preconnect for Performance -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
