--- a/contacts.html
+++ b/contacts.html
@@ -1,6 +1,6 @@
 <!-- 
 ===============================================================================
-# Project: Gen-IA
+# Project: Gen-ia
 # Website: Minimal welcome website
 ===============================================================================
 
@@ -56,7 +56,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                     <hr class="thin-line">
                         If you have any questions, feedback, or inquiries about Genialabile, feel free to reach out to us using the information below.
                         We are always looking for new ways to improve our mission and would love to hear about your experience.
-                        Continuing to evolve and improve our Gen-IA Operative Framework and knowledge is our primary goal.
+                        Continuing to evolve and improve our Gen-ia Operative Framework and knowledge is our primary goal.
                         The applications extend across various fields, from creative writing, art, and philosophy to complex business models and strategic marketing.
                         <br><br>
                         <a href="mailto:genialabile@gmail.com?subject=Beta%20Access&body=Hello!" aria-label="Join Genialabile Beta Access">Join</a>
@@ -113,7 +113,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
                         <a href="https://x.com/seiseisette/" aria-label="Visit seiseisette on X (Twitter)">seiseisette</a>.
                         <br><br>
                         Website & Repository Hosted by GitHub:
-                        <a href="https://github.com/seiseisette/Gen-IA/" aria-label="Visit Gen-IA repository on GitHub">Gen-IA</a>.
+                        <a href="https://github.com/seiseisette/genialabile.com/" aria-label="Visit Gen-ia repository on GitHub">Gen-ia</a>.
                         <br><br>
                         Genialabile is evolving and running on ChatGPT.
                         <br>
